<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.DetailPixelActivity"
    tools:showIn="@layout/activity_detail_pixel">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_user"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_detail_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="86dp"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_detail_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:text="@string/image_resolution"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:text="@string/image_resolution" />

        <TextView
            android:id="@+id/title_detail_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="110dp"
            android:text="@string/views"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="110dp"
            android:text="@string/views" />

        <TextView
            android:id="@+id/title_detail_downloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:text="@string/downloads"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_downloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:text="@string/downloads" />

        <TextView
            android:id="@+id/title_detail_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="190dp"
            android:text="@string/likes"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="190dp"
            android:text="@string/likes" />

        <TextView
            android:id="@+id/title_detail_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="230dp"
            android:text="@string/comments"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="230dp"
            android:text="@string/comments" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.core.widget.NestedScrollView>